Update for Travis CI to use Precise.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ notifications:
   email: false
 git:
   depth: 99999999
+dist: precise
 
 ## uncomment the following lines to allow failures on nightly julia
 ## (tests will run but not make your overall status red)
