Requiring sudo instead of Precise.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
   email: false
 git:
   depth: 99999999
-dist: precise
+sudo: required
 
 ## uncomment the following lines to allow failures on nightly julia
 ## (tests will run but not make your overall status red)
